sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:34: error: 'while' expected but '}' found.
 }}
  ^